# sbomsleuth

./: Cargo.toml  Containerfile  LICENSE  Makefile  README.md
.github/workflows/: ci.yaml  publish.yaml
etc/test-data/cyclonedx/: no_version.json  simple.json
etc/test-data/spdx/: curl-container.json  curl.json  duplicate.json  invalid.json  missing_id.json  missing_id1.json  missing_name.json  missing_version1.json  simple-dup.json  simple.json  spdx.json  volsync-addon-controller_stolostron_3581fd79cc78d38d55c8120616ece3381c5bec60.json
sbomsleuth/: Cargo.toml
sbomsleuth/cli/: Cargo.toml  README.md
sbomsleuth/cli/src/: main.rs
sbomsleuth/src/: check.rs  lib.rs  license.rs  report.rs  validate.rs
sbomsleuth/tests/: api_tests.rs
